feat: Add more swagger for DifficultyController
